Now monitors the status of the workflow pods, and reports a failure message to the workflow monitor if the run failed.